[package]
name = "ech"
version = "0.0.4"
authors = ["Jack Clayton"]
description = "Take in a TCP / HTTP request and return the raw request in the body, and log to stdout. No dependencies"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jackos/ech"
documentation = "https://docs.rs/ech/"
edition = "2021"

[[bin]]
name = "ech"
path = "src/main.rs"
